Regresando del reset por segunda vez

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,13 @@
 <html>
     <head>
-        <title>El titulo</title>
+        <title>Pagina Personal</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aqui vamos a hacer el Blog Post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <h1>Inicio</h1>
+        <p>Esta pagina es creada con el proposito de almacenar en forma de diario los diferentes conocimientos que he adquirido de forma autodidacta junto con diferentes ejercicios.</p>
+        <br>
+        <h2>Temas</h2>
+        <a href="blogpost_git.html" style="text-align: center;">Git</a>
     </body>
 </html>
