Cambios al estilo de la pagina principal, añado link a python

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,9 +5,10 @@
     </head>
     <body>
         <h1>Inicio</h1>
-        <p>Esta pagina es creada con el proposito de almacenar en forma de diario los diferentes conocimientos que he adquirido de forma autodidacta junto con diferentes ejercicios.</p>
+        <p id="bienvenida">Bienvenidos a mi proceso de aprendizaje</p>
         <br>
         <h2>Temas</h2>
         <a href="blogpost_git.html" style="text-align: center;">Git</a>
+        <a href="blogpost_python.html">Python</a>
     </body>
 </html>
