Algunos añadidos sobre la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,11 +4,15 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Inicio</h1>
-        <p id="bienvenida">Bienvenidos a mi proceso de aprendizaje</p>
-        <br>
-        <h2>Temas</h2>
-        <a href="blogpost_git.html" style="text-align: center;">Git</a>
-        <a href="blogpost_python.html">Python</a>
+        <div>
+            <div id="cabecera">
+                <h1>Inicio</h1>
+                <p id="bienvenida">Bienvenidos a mi proceso de aprendizaje</p>
+                <br>
+            </div>
+            <h2>Temas</h2>
+            <a href="blogpost_git.html" style="text-align: center;">Git</a>
+            <a href="blogpost_python.html">Python</a>
+        </div>
     </body>
 </html>
