--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div>
             <div id="cabecera">
-                <h1>Inicio</h1>
+                <h1>Inicio De Mi Web</h1>
                 <p id="bienvenida">Bienvenidos a mi proceso de aprendizaje</p>
                 <br>
             </div>
