--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>Inicio</h1>
+        <p> Aqui añado un nuevo parrafo en el cual deseo explicar mi motivacion por aprender: Una de las cosas que mas me dan curiosidad son de las mas complicadas, fisica cuantica, fisica nuclear, seguridad informatica, aeronautica, nanotecnolia y
+        <br> inteligencia artifil por lo tanto debo de avanzar dia con dia para ser cada dia mejor y estar mas cerca de mi metas</p>
         <p id="bienvenida">Bienvenidos a mi proceso de aprendizaje</p>
         <br>
         <h2>Temas</h2>
