--- a/blogpost.html
+++ b/blogpost.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title>Pagina Personal Sobre Mi aprendizaje</title>
+        <title>Pagina Personal</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
         <div>
             <div id="cabecera">
-                <h1>Inicio De Mi Web</h1>
+                <h1>Inicio De Mi Web Sobre Desarrollo</h1>
                 <p id="bienvenida">Bienvenidos a mi proceso de aprendizaje</p>
                 <p> Aqui añado un nuevo parrafo en el cual deseo explicar mi motivacion por aprender: Una de las cosas que mas me dan curiosidad son de las mas complicadas, fisica cuantica, fisica nuclear, seguridad informatica, aeronautica, nanotecnolia y
                     <br> inteligencia artifil por lo tanto debo de avanzar dia con dia para ser cada dia mejor y estar mas cerca de mi metas</p>
