--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div>
+            <div>
+                <img id="logo" src="imagenes/IconoNAVE.png">
+            </div>
             <div id="cabecera">
                 <h1>Inicio De Mi Web Sobre Desarrollo</h1>
                 <p id="bienvenida">Bienvenidos a mi proceso de aprendizaje</p>
