--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
                     <br> inteligencia artifil por lo tanto debo de avanzar dia con dia para ser cada dia mejor y estar mas cerca de mi metas</p>
                 <br>
                 <p>Esto es un experimento</p>
+                <p>Experimento 2</p>
             </div>
             <h2>Temas</h2>
             <a href="blogpost_git.html" style="text-align: center;">Git</a>
